--- a/index.html
+++ b/index.html
@@ -23,18 +23,16 @@
                 </li>
             </ul>
         </nav>
+        <address>
             <ul>
                 <li>
-                    <a href="info@devstudio.com" target="_blank">
-                        info@devstudio.com
-                    </a>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="+11 (000) 111-11-11" target="_blank">
-                        +11 (000) 111-11-11
-                    </a>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
+        </address>
     </header>
     <main>
         <!--hero-->  
