--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <p>Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
+                    <h3>Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
