--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1>
                 Effective Solutions for Your Business
             </h1>
-            <button>Order Service</button>
+            <button type="button">Order Service</button>
         </section>
 
         <!--benefits-->
@@ -94,10 +94,13 @@
         </section>
     </main>
     <footer>
-        <nav>
+        <div>
             <a href="./index.html">WebStudio</a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </nav>
+            <p>
+                Increase the flow of customers and sales for your business<br> 
+                with digital marketing & growth solutions.
+            </p>
+        </div>
     </footer>
 </body>
 </html>
