--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <nav>
             <a href="./index.html">
-                WEBSTUDIO
+                WebStudio
             </a>
             <ul>
                 <li>
@@ -97,7 +97,7 @@
         <div>
             <a href="./index.html">WebStudio</a>
             <p>
-                Increase the flow of customers and sales for your business<br> 
+                Increase the flow of customers and sales for your business
                 with digital marketing & growth solutions.
             </p>
         </div>
