--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
         <div>
             <a href="./index.html">WebStudio</a>
             <p>
-                Increase the flow of customers and sales for your business
-                with digital marketing & growth solutions.
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
         </div>
     </footer>
